# modkit-binding-poc

./: Cargo.toml  Makefile  README.md  run-demo.sh
modkit-contract-macros/: Cargo.toml
modkit-contract-macros/src/: contract_error.rs  lib.rs  rest_client.rs
modkit-contract-runtime/: Cargo.toml
modkit-contract-runtime/src/: directory.rs  lib.rs
modkit-directory/: Cargo.toml
modkit-directory/src/: lib.rs
modules/notification-plugin/notification-plugin-email/: Cargo.toml
modules/notification-plugin/notification-plugin-email/src/: lib.rs
modules/notification-plugin/notification-plugin-remote/: Cargo.toml
modules/notification-plugin/notification-plugin-remote/src/: main.rs
modules/notification/notification/: Cargo.toml
modules/notification/notification-sdk/: Cargo.toml
modules/notification/notification-sdk/src/: api.rs  error.rs  lib.rs  types.rs
modules/notification/notification/src/: lib.rs  main.rs
modules/notification/notification/tests/: manual_mock.rs  mockall_mock.rs
poc-host/: Cargo.toml
poc-host/src/: main.rs  openapi_gen.rs
