[workspace]
members = [
    "modules/notification/notification",
    "modules/notification/notification-sdk",
    "modules/notification-plugin/notification-plugin-email",
    "modules/notification-plugin/notification-plugin-remote",
    "poc-host",
    "modkit-contract-macros",
    "modkit-contract-runtime", "modkit-directory",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
tokio-stream = "0.1"
schemars = "0.8"
