[package]
name = "modkit-contract-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
