[package]
name = "notification"
version = "0.1.0"
edition = "2024"

[dependencies]
notification-sdk = { path = "../notification-sdk" }
notification-plugin-email = { path = "../../notification-plugin/notification-plugin-email" }
modkit-contract-runtime = { path = "../../../modkit-contract-runtime" }
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
mockall = "0.13"
tokio-stream = "0.1"
